Fix snowflakes being hidden behind background
- Changed snowflake z-index from -1 to 1
- Changed position from absolute to fixed
- body::before background was covering snowflakes at z-index -1
- Snowflakes now appear above background gradient

--- a/christmas/christmas.css
+++ b/christmas/christmas.css
@@ -976,9 +976,9 @@ select.sort-select {
 
 /* Snowfall effect */
 .snowflake {
-  position: absolute;
+  position: fixed;
   top: -50px;
-  z-index: -1;
+  z-index: 1;
   user-select: none;
   pointer-events: none;
   color: white;
